// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Common Components Tests render TooltipDetail 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-tooltip-detail-list"
  >
    <div
      class="antv-s2-tooltip-detail-item"
    >
      <span
        class="antv-s2-tooltip-detail-item-key"
      >
        20岁以下
      </span>
      <span
        class="antv-s2-tooltip-detail-item-val antv-s2-tooltip-highlight"
      >
        20.5%
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip Common Components Tests render TooltipHead 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-tooltip-head-info-list"
  >
    一二线城市，有信用卡/学生/20岁以下
  </div>
</DocumentFragment>
`;

exports[`Tooltip Common Components Tests render TooltipSummary 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-tooltip-summary"
  >
    <div
      class="antv-s2-tooltip-summary-item"
    >
      <span
        class="antv-s2-tooltip-selected"
      >
        90 项
      </span>
      已选择
    </div>
    <div
      class="antv-s2-tooltip-summary-item"
    >
      <span
        class="antv-s2-tooltip-summary-key"
      >
        A人群（总和）
      </span>
      <span
        class="antv-s2-tooltip-summary-val antv-s2-tooltip-bold"
      >
        495.48 %
      </span>
    </div>
    <div
      class="antv-s2-tooltip-summary-item"
    >
      <span
        class="antv-s2-tooltip-summary-key"
      >
        B人群（总和）
      </span>
      <span
        class="antv-s2-tooltip-summary-val antv-s2-tooltip-bold"
      >
        494.52%
      </span>
    </div>
    <div
      class="antv-s2-tooltip-summary-item"
    >
      <span
        class="antv-s2-tooltip-summary-key"
      >
        差值（总和）
      </span>
      <span
        class="antv-s2-tooltip-summary-val antv-s2-tooltip-bold"
      >
        +381%
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip Common Components Tests render custom react component icon 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-tooltip-operator"
  >
    <ul
      class="ant-menu-overflow ant-menu ant-menu-root ant-menu-horizontal ant-menu-light antv-s2-tooltip-operator-menus css-dev-only-do-not-override-p7e5j5"
      data-menu-list="true"
      role="menu"
      tabindex="0"
    >
      <li
        class="ant-menu-overflow-item ant-menu-submenu ant-menu-submenu-horizontal"
        role="none"
        style="opacity: 1; order: 0;"
      >
        <div
          aria-controls="rc-menu-uuid-test-react component icon-popup"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-react component icon"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="antv-s2-react-element antv-s2-tooltip-operator-icon ant-menu-item-icon"
          >
            <span
              aria-label="down-circle"
              class="anticon anticon-down-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M690 405h-46.9c-10.2 0-19.9 4.9-25.9 13.2L512 563.6 406.8 418.2c-6-8.3-15.6-13.2-25.9-13.2H334c-6.5 0-10.3 7.4-6.5 12.7l178 246c3.2 4.4 9.7 4.4 12.9 0l178-246c3.9-5.3.1-12.7-6.4-12.7z"
                />
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
              </svg>
            </span>
          </span>
          <span
            class="ant-menu-title-content"
          >
            react component icon
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        aria-hidden="true"
        class="ant-menu-overflow-item ant-menu-overflow-item-rest ant-menu-submenu ant-menu-submenu-horizontal ant-menu-submenu-disabled"
        role="none"
        style="opacity: 0; height: 0px; overflow-y: hidden; order: 2147483647; pointer-events: none; position: absolute;"
      >
        <div
          aria-controls="rc-menu-uuid-test-rc-menu-more-popup"
          aria-disabled="true"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-rc-menu-more"
          role="menuitem"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
    <div
      aria-hidden="true"
      style="display: none;"
    />
  </div>
</DocumentFragment>
`;

exports[`Tooltip Common Components Tests render hide icon: TooltipOperator 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-tooltip-operator"
  >
    <ul
      class="ant-menu-overflow ant-menu ant-menu-root ant-menu-horizontal ant-menu-light antv-s2-tooltip-operator-menus css-dev-only-do-not-override-p7e5j5"
      data-menu-list="true"
      role="menu"
      tabindex="0"
    >
      <li
        class="ant-menu-overflow-item ant-menu-submenu ant-menu-submenu-horizontal"
        role="none"
        style="opacity: 1; order: 0;"
      >
        <div
          aria-controls="rc-menu-uuid-test-hiddenColumns-popup"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-hiddenColumns"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="antv-s2-html-icon antv-s2-tooltip-operator-icon ant-menu-item-icon"
          >
            <svg
              aria-hidden="true"
              data-icon="eye"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
              />
            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            隐藏
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        aria-hidden="true"
        class="ant-menu-overflow-item ant-menu-overflow-item-rest ant-menu-submenu ant-menu-submenu-horizontal ant-menu-submenu-disabled"
        role="none"
        style="opacity: 0; height: 0px; overflow-y: hidden; order: 2147483647; pointer-events: none; position: absolute;"
      >
        <div
          aria-controls="rc-menu-uuid-test-rc-menu-more-popup"
          aria-disabled="true"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-rc-menu-more"
          role="menuitem"
        >
          <span
            aria-label="ellipsis"
            class="anticon anticon-ellipsis"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="ellipsis"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
    <div
      aria-hidden="true"
      style="display: none;"
    />
  </div>
</DocumentFragment>
`;

exports[`Tooltip Common Components Tests render sort tooltip: TooltipOperator 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-tooltip-operator"
  >
    <ul
      class="ant-menu ant-menu-root ant-menu-vertical ant-menu-light antv-s2-tooltip-operator-menus css-dev-only-do-not-override-p7e5j5"
      data-menu-list="true"
      role="menu"
      tabindex="0"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-vertical ant-menu-submenu-selected"
        role="none"
      >
        <div
          aria-controls="rc-menu-uuid-test-asc-popup"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-asc"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="antv-s2-html-icon antv-s2-tooltip-operator-icon ant-menu-item-icon"
          >
            <svg
              class="icon"
              height="14"
              p-id="17670"
              style=""
              t="1557124695786"
              version="1.1"
              viewBox="0 0 1024 1024"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              
  
              <defs>
                
    
                <style
                  type="text/css"
                />
                
  
              </defs>
              
  
              <path
                d="M182.272 167.04a8 8 0 0 0-12.544 0L57.728 309.056A8 8 0 0 0 64 321.984h76.032v530.048c0 4.352 3.584 7.936 7.936 7.936h56.064a8 8 0 0 0 7.936-7.936V321.92H288a8 8 0 0 0 6.272-12.992l-112-141.888z m209.728 62.976h304A8 8 0 0 0 704 222.016v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 166.016v56c0 4.416 3.584 8 8 8z m0 424h304a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 590.016v56c0 4.416 3.584 8 8 8z m528 139.968h-528a8 8 0 0 0-8 8v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z m0-424h-528A8 8 0 0 0 384 377.984v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z"
                p-id="17671"
              />
              

            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            组内升序
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-vertical"
        role="none"
      >
        <div
          aria-controls="rc-menu-uuid-test-desc-popup"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-desc"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="antv-s2-html-icon antv-s2-tooltip-operator-icon ant-menu-item-icon"
          >
            <svg
              class="icon"
              height="14"
              p-id="17779"
              style=""
              t="1557124710652"
              version="1.1"
              viewBox="0 0 1024 1024"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              
  
              <defs>
                
    
                <style
                  type="text/css"
                />
                
  
              </defs>
              
  
              <path
                d="M182.272 856.96a8 8 0 0 1-12.544 0l-112-141.952A8 8 0 0 1 64 702.08h76.032V172.032c0-4.416 3.584-8 7.936-8h56.064c4.352 0 7.936 3.584 7.936 8v529.984H288c6.72 0 10.496 7.808 6.272 12.992l-112 141.888z m209.728-626.944h304A8 8 0 0 0 704 222.016v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 166.016v56c0 4.416 3.584 8 8 8z m0 424h304a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 590.016v56c0 4.416 3.584 8 8 8z m528 139.968h-528a8 8 0 0 0-8 8v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z m0-424h-528A8 8 0 0 0 384 377.984v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z"
                p-id="17780"
              />
              

            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            组内降序
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-vertical"
        role="none"
      >
        <div
          aria-controls="rc-menu-uuid-test-none-popup"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-none"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-menu-title-content"
          >
            不排序
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
    <div
      aria-hidden="true"
      style="display: none;"
    />
  </div>
</DocumentFragment>
`;

exports[`Tooltip Component Tests should render sort menu and select { key: 'asc', icon: 'groupAsc', label: '组内升序' } menu 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-tooltip-operator"
  >
    <ul
      class="ant-menu ant-menu-root ant-menu-vertical ant-menu-light antv-s2-tooltip-operator-menus css-dev-only-do-not-override-p7e5j5"
      data-menu-list="true"
      role="menu"
      tabindex="0"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-vertical ant-menu-submenu-selected"
        role="none"
      >
        <div
          aria-controls="rc-menu-uuid-test-asc-popup"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-asc"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="antv-s2-html-icon antv-s2-tooltip-operator-icon ant-menu-item-icon"
          >
            <svg
              class="icon"
              height="14"
              p-id="17670"
              style=""
              t="1557124695786"
              version="1.1"
              viewBox="0 0 1024 1024"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              
  
              <defs>
                
    
                <style
                  type="text/css"
                />
                
  
              </defs>
              
  
              <path
                d="M182.272 167.04a8 8 0 0 0-12.544 0L57.728 309.056A8 8 0 0 0 64 321.984h76.032v530.048c0 4.352 3.584 7.936 7.936 7.936h56.064a8 8 0 0 0 7.936-7.936V321.92H288a8 8 0 0 0 6.272-12.992l-112-141.888z m209.728 62.976h304A8 8 0 0 0 704 222.016v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 166.016v56c0 4.416 3.584 8 8 8z m0 424h304a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 590.016v56c0 4.416 3.584 8 8 8z m528 139.968h-528a8 8 0 0 0-8 8v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z m0-424h-528A8 8 0 0 0 384 377.984v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z"
                p-id="17671"
              />
              

            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            组内升序
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-vertical"
        role="none"
      >
        <div
          aria-controls="rc-menu-uuid-test-desc-popup"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-desc"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="antv-s2-html-icon antv-s2-tooltip-operator-icon ant-menu-item-icon"
          >
            <svg
              class="icon"
              height="14"
              p-id="17779"
              style=""
              t="1557124710652"
              version="1.1"
              viewBox="0 0 1024 1024"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              
  
              <defs>
                
    
                <style
                  type="text/css"
                />
                
  
              </defs>
              
  
              <path
                d="M182.272 856.96a8 8 0 0 1-12.544 0l-112-141.952A8 8 0 0 1 64 702.08h76.032V172.032c0-4.416 3.584-8 7.936-8h56.064c4.352 0 7.936 3.584 7.936 8v529.984H288c6.72 0 10.496 7.808 6.272 12.992l-112 141.888z m209.728-626.944h304A8 8 0 0 0 704 222.016v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 166.016v56c0 4.416 3.584 8 8 8z m0 424h304a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 590.016v56c0 4.416 3.584 8 8 8z m528 139.968h-528a8 8 0 0 0-8 8v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z m0-424h-528A8 8 0 0 0 384 377.984v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z"
                p-id="17780"
              />
              

            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            组内降序
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-vertical"
        role="none"
      >
        <div
          aria-controls="rc-menu-uuid-test-none-popup"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-none"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-menu-title-content"
          >
            不排序
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
    <div
      aria-hidden="true"
      style="display: none;"
    />
  </div>
</DocumentFragment>
`;

exports[`Tooltip Component Tests should render sort menu and select { key: 'desc', icon: 'groupDesc', label: '组内降序' } menu 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-tooltip-operator"
  >
    <ul
      class="ant-menu ant-menu-root ant-menu-vertical ant-menu-light antv-s2-tooltip-operator-menus css-dev-only-do-not-override-p7e5j5"
      data-menu-list="true"
      role="menu"
      tabindex="0"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-vertical"
        role="none"
      >
        <div
          aria-controls="rc-menu-uuid-test-asc-popup"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-asc"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="antv-s2-html-icon antv-s2-tooltip-operator-icon ant-menu-item-icon"
          >
            <svg
              class="icon"
              height="14"
              p-id="17670"
              style=""
              t="1557124695786"
              version="1.1"
              viewBox="0 0 1024 1024"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              
  
              <defs>
                
    
                <style
                  type="text/css"
                />
                
  
              </defs>
              
  
              <path
                d="M182.272 167.04a8 8 0 0 0-12.544 0L57.728 309.056A8 8 0 0 0 64 321.984h76.032v530.048c0 4.352 3.584 7.936 7.936 7.936h56.064a8 8 0 0 0 7.936-7.936V321.92H288a8 8 0 0 0 6.272-12.992l-112-141.888z m209.728 62.976h304A8 8 0 0 0 704 222.016v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 166.016v56c0 4.416 3.584 8 8 8z m0 424h304a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 590.016v56c0 4.416 3.584 8 8 8z m528 139.968h-528a8 8 0 0 0-8 8v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z m0-424h-528A8 8 0 0 0 384 377.984v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z"
                p-id="17671"
              />
              

            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            组内升序
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-vertical ant-menu-submenu-selected"
        role="none"
      >
        <div
          aria-controls="rc-menu-uuid-test-desc-popup"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-desc"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="antv-s2-html-icon antv-s2-tooltip-operator-icon ant-menu-item-icon"
          >
            <svg
              class="icon"
              height="14"
              p-id="17779"
              style=""
              t="1557124710652"
              version="1.1"
              viewBox="0 0 1024 1024"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              
  
              <defs>
                
    
                <style
                  type="text/css"
                />
                
  
              </defs>
              
  
              <path
                d="M182.272 856.96a8 8 0 0 1-12.544 0l-112-141.952A8 8 0 0 1 64 702.08h76.032V172.032c0-4.416 3.584-8 7.936-8h56.064c4.352 0 7.936 3.584 7.936 8v529.984H288c6.72 0 10.496 7.808 6.272 12.992l-112 141.888z m209.728-626.944h304A8 8 0 0 0 704 222.016v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 166.016v56c0 4.416 3.584 8 8 8z m0 424h304a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 590.016v56c0 4.416 3.584 8 8 8z m528 139.968h-528a8 8 0 0 0-8 8v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z m0-424h-528A8 8 0 0 0 384 377.984v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z"
                p-id="17780"
              />
              

            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            组内降序
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-vertical"
        role="none"
      >
        <div
          aria-controls="rc-menu-uuid-test-none-popup"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-none"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-menu-title-content"
          >
            不排序
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
    <div
      aria-hidden="true"
      style="display: none;"
    />
  </div>
</DocumentFragment>
`;

exports[`Tooltip Component Tests should render sort menu and select { key: 'none', label: '不排序' } menu 1`] = `
<DocumentFragment>
  <div
    class="antv-s2-tooltip-operator"
  >
    <ul
      class="ant-menu ant-menu-root ant-menu-vertical ant-menu-light antv-s2-tooltip-operator-menus css-dev-only-do-not-override-p7e5j5"
      data-menu-list="true"
      role="menu"
      tabindex="0"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-vertical"
        role="none"
      >
        <div
          aria-controls="rc-menu-uuid-test-asc-popup"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-asc"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="antv-s2-html-icon antv-s2-tooltip-operator-icon ant-menu-item-icon"
          >
            <svg
              class="icon"
              height="14"
              p-id="17670"
              style=""
              t="1557124695786"
              version="1.1"
              viewBox="0 0 1024 1024"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              
  
              <defs>
                
    
                <style
                  type="text/css"
                />
                
  
              </defs>
              
  
              <path
                d="M182.272 167.04a8 8 0 0 0-12.544 0L57.728 309.056A8 8 0 0 0 64 321.984h76.032v530.048c0 4.352 3.584 7.936 7.936 7.936h56.064a8 8 0 0 0 7.936-7.936V321.92H288a8 8 0 0 0 6.272-12.992l-112-141.888z m209.728 62.976h304A8 8 0 0 0 704 222.016v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 166.016v56c0 4.416 3.584 8 8 8z m0 424h304a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 590.016v56c0 4.416 3.584 8 8 8z m528 139.968h-528a8 8 0 0 0-8 8v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z m0-424h-528A8 8 0 0 0 384 377.984v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z"
                p-id="17671"
              />
              

            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            组内升序
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-vertical"
        role="none"
      >
        <div
          aria-controls="rc-menu-uuid-test-desc-popup"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-desc"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="antv-s2-html-icon antv-s2-tooltip-operator-icon ant-menu-item-icon"
          >
            <svg
              class="icon"
              height="14"
              p-id="17779"
              style=""
              t="1557124710652"
              version="1.1"
              viewBox="0 0 1024 1024"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              
  
              <defs>
                
    
                <style
                  type="text/css"
                />
                
  
              </defs>
              
  
              <path
                d="M182.272 856.96a8 8 0 0 1-12.544 0l-112-141.952A8 8 0 0 1 64 702.08h76.032V172.032c0-4.416 3.584-8 7.936-8h56.064c4.352 0 7.936 3.584 7.936 8v529.984H288c6.72 0 10.496 7.808 6.272 12.992l-112 141.888z m209.728-626.944h304A8 8 0 0 0 704 222.016v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 166.016v56c0 4.416 3.584 8 8 8z m0 424h304a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8h-304A8 8 0 0 0 384 590.016v56c0 4.416 3.584 8 8 8z m528 139.968h-528a8 8 0 0 0-8 8v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z m0-424h-528A8 8 0 0 0 384 377.984v56c0 4.416 3.584 8 8 8h528a8 8 0 0 0 8-8v-56a8 8 0 0 0-8-8z"
                p-id="17780"
              />
              

            </svg>
          </span>
          <span
            class="ant-menu-title-content"
          >
            组内降序
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-vertical ant-menu-submenu-selected"
        role="none"
      >
        <div
          aria-controls="rc-menu-uuid-test-none-popup"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
          data-menu-id="rc-menu-uuid-test-none"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="ant-menu-title-content"
          >
            不排序
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
    <div
      aria-hidden="true"
      style="display: none;"
    />
  </div>
</DocumentFragment>
`;
